[package]
name = "pcss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
env_logger = "0.9.1"
log = "0.4.17"
ssh2 = "0.9.3"
walkdir = "2.3.2"
