[package]
name = "slurmq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
confy = "0.5.1"
env_logger = "0.9.1"
expanduser = "1.2.2"
log = "0.4.17"
serde = { version="1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
ssh2 = "0.9.3"
ssh2-config = "0.1.3"
walkdir = "2.3.2"
