[package]
name = "slurmq"
version = "0.1.0"
edition = "2021"
description = "Queue jobs on HPC with slurm"
repository = "https://github.com/mathieumoalic/slurmq"
readme = "README.md"
license = "GPL3"
keywords = ["slurm"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive"] }
crossterm = "0.25.0"
expanduser = "1.2.2"
ssh2 = "0.9.3"
ssh2-config = "0.1.3"
tui = "0.19.0"
walkdir = "2.3.2"
